tests/ui/linkage-attr/raw-dylib/windows/link-ordinal-invalid-format.stderr
error[E0539]: malformed `link_ordinal` attribute input
  --> $DIR/link-ordinal-invalid-format.rs:3:5
   |
LL |     #[link_ordinal("JustMonika")]
   |     ^^^^^^^^^^^^^^^------------^^
   |                    |
   |                    expected an integer literal here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link_ordinal-attribute>
help: must be of the form
   |
LL -     #[link_ordinal("JustMonika")]
LL +     #[link_ordinal(ordinal)]
   |

error[E0539]: malformed `link_ordinal` attribute input
  --> $DIR/link-ordinal-invalid-format.rs:6:5
   |
LL |     #[link_ordinal("JustMonika")]
   |     ^^^^^^^^^^^^^^^------------^^
   |                    |
   |                    expected an integer literal here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/items/external-blocks.html#the-link_ordinal-attribute>
help: must be of the form
   |
LL -     #[link_ordinal("JustMonika")]
LL +     #[link_ordinal(ordinal)]
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0539`.
